<resources>
    <string name="app_name">TestWebServiceApi</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="tela_cadastro">Cadastro</string>
    <string name="cadastra_se">Cadastra-se</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="cadastro">CADASTRO</string>
    <string name="descricao">Descrição</string>
    <string name="data_nascimento">Data Nascimento</string>
    <string name="sexo">Sexo</string>
    <string name="tipo">Tipo</string>
    <string name="atualizar">Atualizar</string>
    <string name="login_facebook">Login com Facebook</string>
    <string name="login_twitter">Login com Twitter</string>
    <string name="criar_conta">Criar uma Conta</string>
    <string name="sobre">SOBRE</string>
    <string name="contato">CONTATO</string>
    <string name="login">LOGIN</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="home">HOME</string>


    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="perfil">Perfil</string>
    <string name="favoritos">Favoritos</string>
    <string name="atividades">Atividades</string>
    <string name="configuracoes">Configurações</string>
    <string name="sair">Sair</string>
    <string name="login_com_google">Login com Google</string>

</resources>
