<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="br.com.testwebserviceapi.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_favoritos"
        android:name="br.com.testwebserviceapi.ui.favoritos.FavoritosFragment"
        android:label="@string/favoritos"
        tools:layout="@layout/fragment_favoritos" />

    <fragment
        android:id="@+id/nav_atividades"
        android:name="br.com.testwebserviceapi.ui.atividades.AtividadesFragment"
        android:label="@string/atividades"
        tools:layout="@layout/fragment_atividades" />

    <fragment
        android:id="@+id/nav_configuracoes"
        android:name="br.com.testwebserviceapi.ui.configuracoes.ConfiguracoesFragment"
        android:label="@string/configuracoes"
        tools:layout="@layout/fragment_configuracoes" />

    <fragment
        android:id="@+id/nav_sair"
        android:name="br.com.testwebserviceapi.ui.sair.SairFragment"
        android:label="@string/sair"
        tools:layout="@layout/fragment_sair" />

</navigation>