<?xml version="1.0" encoding="utf-8"?><ScrollView xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    style="@android:style/Widget.DeviceDefault.Light.ScrollView"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:background="@color/colorPrimary"    android:orientation="vertical"    android:padding="1dp"    tools:context=".UpdateActivity">    <LinearLayout        android:layout_width="match_parent"        android:layout_height="match_parent"        android:orientation="vertical">        <LinearLayout            android:layout_width="300dp"            android:layout_height="wrap_content"            android:layout_gravity="center"            android:layout_marginTop="20dp"            android:layout_marginBottom="20dp"            android:background="@drawable/homeshape"            android:gravity="center"            android:padding="10dp">            <TextView                android:layout_width="300dp"                android:layout_height="wrap_content"                android:gravity="center"                android:text="@string/atualizar"                android:textColor="@color/colorWhite"                android:textSize="25sp"                android:textStyle="bold" />        </LinearLayout>        <LinearLayout            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:gravity="center"            android:orientation="vertical">            <EditText                android:id="@+id/edtNameUpdate"                android:layout_width="300dp"                android:layout_height="wrap_content"                android:layout_marginBottom="0.5dp"                android:background="@drawable/capsule"                android:hint="@string/nome"                android:imeOptions="actionNext"                android:inputType="text"                android:paddingLeft="20dp"                android:textSize="15sp" />            <EditText                android:id="@+id/edtLastNameUpdate"                android:layout_width="300dp"                android:layout_height="wrap_content"                android:layout_marginBottom="0.5dp"                android:background="@drawable/capsule"                android:hint="@string/sobrenome"                android:imeOptions="actionNext"                android:inputType="text"                android:paddingLeft="20dp"                android:textSize="15sp" />            <EditText                android:id="@+id/edtEmailUpdate"                android:layout_width="300dp"                android:layout_height="wrap_content"                android:layout_marginBottom="0.5dp"                android:background="@drawable/capsule"                android:hint="@string/email"                android:imeOptions="actionNext"                android:inputType="textEmailAddress"                android:paddingLeft="20dp"                android:textSize="15sp" />            <EditText                android:id="@+id/edtSenhaUpdate"                android:layout_width="300dp"                android:layout_height="wrap_content"                android:layout_marginBottom="0.5dp"                android:background="@drawable/capsule"                android:hint="@string/senha"                android:imeOptions="actionNext"                android:inputType="textPassword"                android:paddingLeft="20dp"                android:textSize="15sp" />            <EditText                android:id="@+id/edtDescUpdate"                android:layout_width="300dp"                android:layout_height="wrap_content"                android:layout_marginBottom="0.5dp"                android:background="@drawable/capsule"                android:hint="@string/descricao"                android:imeOptions="actionNext"                android:inputType="text"                android:paddingLeft="20dp"                android:textSize="15sp" />            <!--EditText                android:id="@+id/edtImgUpdate"                android:layout_width="300dp"                android:layout_height="wrap_content"                android:layout_marginBottom="0.5dp"                android:background="@drawable/capsule"                android:hint="Imagem"                android:imeOptions="actionNext"                android:inputType="text"                android:paddingLeft="20dp"                android:textSize="15sp" / -->            <EditText                android:id="@+id/edtDateUpdate"                android:layout_width="300dp"                android:layout_height="wrap_content"                android:layout_marginBottom="0.5dp"                android:background="@drawable/capsule"                android:hint="@string/data_nascimento"                android:imeOptions="actionNext"                android:inputType="datetime"                android:paddingLeft="20dp"                android:textSize="15sp" />            <EditText                android:id="@+id/edtSexoUpdate"                android:layout_width="300dp"                android:layout_height="wrap_content"                android:layout_marginBottom="0.5dp"                android:background="@drawable/capsule"                android:hint="@string/sexo"                android:imeOptions="actionNext"                android:inputType="text"                android:paddingLeft="20dp"                android:textSize="15sp" />            <!-- EditText                android:id="@+id/edtTypeUpdate"                android:layout_width="300dp"                android:layout_height="wrap_content"                android:layout_marginBottom="0.5dp"                android:background="@drawable/capsule"                android:hint="@string/tipo"                android:imeOptions="actionNext"                android:inputType="text"                android:paddingLeft="20dp"                android:textSize="15sp" / -->        </LinearLayout>        <LinearLayout            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginTop="1dp"            android:layout_marginBottom="20dp"            android:gravity="center">            <Button                android:id="@+id/btnUpdate"                android:layout_width="300dp"                android:layout_height="wrap_content"                android:background="@color/colorPrimaryDark"                android:src="@drawable/capsule"                android:text="@string/atualizar"                android:textColor="@color/colorWhite" />        </LinearLayout>    </LinearLayout></ScrollView>